# rcvs

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/postcodes/: outcodes.csv
data/practices/: surrey_vetgdp.json
docs/: rcvs_website_technical_reference.md
src/rcvs/app/: Home.py  main.py
src/rcvs/app/components/: auth.py  data_loader.py  email_draft.py  filters.py  practice_detail.py
src/rcvs/app/pages/: 0_Home.py  1_Practice_Table.py  2_Map_View.py  3_Contact_Tracker.py  4_Export.py
src/rcvs/geo/: postcodes.py
src/rcvs/scraper/: client.py  detail_parser.py  list_parser.py  models.py  run.py
src/rcvs/sheets/: tracker.py
